2011-04-27  Mark Grondona <mgrondona@llnl.gov>

	* tests/t2001-ssh.sh :
	  Test to make sure %u and %h are not _forced_ to be in
	  PDSH_SSH_ARGS when used.

	* tests/t0001-basic.sh :
	  Check for graceful failure when supplied username is too long.

	* tests/test-lib.sh, tests/t2001-ssh.sh :
	  Add a simplified shell function implemntation of seq(1).
	  Remove SEQ prereq. (Some systems don't have seq(1)).

	* src/pdsh/opt.h, src/pdsh/opt.c:
	  Don't use static buffers for ruser and luser. Instead allocate
	  memory based on the return value of sysconf(_SC_LOGIN_NAME_MAX)
	  if available. Supplying a username longer than this value is now
	  a fatal error. (Issue 24)

2011-04-25  Mark Grondona <mgrondona@llnl.gov>

	* src/tests/test-lib.sh, tests/t0004-module-loading.sh,
	  tests/t0006-pdcp.sh :
	  Allow testsuite to run even with --enable-static-modules.

	* src/pdsh/mod.c :
	  Move prototypes outside of STATIC_MODULES ifdef so that
	  build with --enable-static-modules succeeds.

2011-04-22  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c :
	  Remove runtime check for genders_query support using dlopen/dlsym.
	  Use HAVE_GENDERS_QUERY at compile-time instead.

	* config/ac_genders.m4, configure, config.h.in :
	  Add check for genders_query during configure.

2011-04-20  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c :
	  ISO C doesn't allow missing middle operand in conditional
	  expression. Replace x ?: y with x ? x : y.

2011-04-19  Mark Grondona <mgrondona@llnl.gov>

	* scripts/dshbak :
	  Fix for missing commas in header output (issue 19).

	* tests/t5000-dshbak.sh :
	  Add test to ensure commas appear in dshbak output (issue 19).

	* configure.ac, configure :
	  Append -Wl,-E to LDFLAGS on HP-UX (Issue 18).

2011-04-03  Mark Grondona <mgrondona@llnl.gov>

	* tests/t2001-ssh.sh:
	  Use random() function instead of bash's $RANDOM.
	  Replace {..} with seq(1).

	* tests/test-lib.sh :